# Fractol

./: .gitignore  CMakeLists.txt  Makefile  README.md
includes/: fractol.h
src/: hooks.c  image_calc.c  julia_mandelbrot.c  main.c  mandelbar.c
